# backend/alembic/versions/ae989c4a3a9b_add_reference_models.py
@@ -1,0 +1,62 @@
+"""Add reference models
+
+Revision ID: ae989c4a3a9b
+Revises: 63bf49e0df82
+Create Date: 2026-06-28 22:40:47.049071
+
+"""
+
+from collections.abc import Sequence
+
+import sqlalchemy as sa
+
+from alembic import op
+
+revision: str = "ae989c4a3a9b"
+down_revision: str | None = "63bf49e0df82"
+branch_labels: str | Sequence[str] | None = None
+depends_on: str | Sequence[str] | None = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table(
+        "currencies",
+        sa.Column("id", sa.Integer(), nullable=False),
+        sa.Column("code", sa.String(length=3), nullable=False),
+        sa.Column("name", sa.String(length=100), nullable=False),
+        sa.PrimaryKeyConstraint("id"),
+    )
+    op.create_index(op.f("ix_currencies_code"), "currencies", ["code"], unique=True)
+    op.create_table(
+        "departments",
+        sa.Column("id", sa.Integer(), nullable=False),
+        sa.Column("name", sa.String(length=100), nullable=False),
+        sa.PrimaryKeyConstraint("id"),
+    )
+    op.create_index(op.f("ix_departments_name"), "departments", ["name"], unique=True)
+    op.create_table(
+        "countries",
+        sa.Column("id", sa.Integer(), nullable=False),
+        sa.Column("code", sa.String(length=2), nullable=False),
+        sa.Column("name", sa.String(length=100), nullable=False),
+        sa.Column("default_currency_id", sa.Integer(), nullable=False),
+        sa.ForeignKeyConstraint(
+            ["default_currency_id"],
+            ["currencies.id"],
+        ),
+        sa.PrimaryKeyConstraint("id"),
+    )
+    op.create_index(op.f("ix_countries_code"), "countries", ["code"], unique=True)
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_index(op.f("ix_countries_code"), table_name="countries")
+    op.drop_table("countries")
+    op.drop_index(op.f("ix_departments_name"), table_name="departments")
+    op.drop_table("departments")
+    op.drop_index(op.f("ix_currencies_code"), table_name="currencies")
+    op.drop_table("currencies")
+    # ### end Alembic commands ###
